--- a/package.json
+++ b/package.json
@@ -2,5 +2,10 @@
   "dependencies": {
     "@tailwindcss/cli": "^4.1.18",
     "tailwindcss": "^4.1.18"
+  },
+
+  "scripts": {
+    "w" : "npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch"
   }
+
 }
